[project]
name = "cactus"
version = "0.1.0"
description = "Claude Code Terminal Session Manager"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.45.0",
    "libtmux>=0.28.0",
]

[project.scripts]
cactus = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["app.py", "models.py", "screens.py", "terminal.py", "widgets.py"]
